--- a/_data/organisers.yml
+++ b/_data/organisers.yml
@@ -32,3 +32,8 @@ Dimitris Sarigiannis:
     name: Dimitris Sarigiannis
     email: "saridimi@gmail.com"
     photo: "../assets/people/dimitrissarigiannis.jpeg"
+    
+Dimitris Gousios:
+    name: Dimitris Gousios
+    email: "dimitrisgousios@outlook.com"
+    photo: ""
